# fastapi_user_auth

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
core/: database.py  service.py  settings.py
migrations/: env.py
migrations/versions/: 2024_02_20_1425-0a903d8a6772_create_users_table.py  2024_02_20_1428-7436da4a826b_update_users_models.py  2024_02_21_1054-a3bb2886a831_add_parameter_is_active_in_users_model.py
users/: models.py  schemas.py  security.py  service.py  utils.py  views.py
