[tool.poetry]
name = "fastapi-user-auth"
version = "0.1.0"
description = ""
authors = ["VladMerk <merkvladimir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
aiosqlite = "^0.20.0"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pydantic-settings = "^2.2.1"
bcrypt = "^4.1.2"
pydantic = {extras = ["email"], version = "^2.6.1"}
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
python-multipart = "^0.0.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-asyncio = "^0.23.5"
black = "^24.2.0"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = "W291 E128 E122"

[tool.pytest.ini_options]
addopts = "-sv -p no:cacheprovider --cov=. --cov-report html"
testpaths = ["tests"]

[tool.coverage.report]
exclude_also = [
        "if __name__ == '__main__'",
    ]
ignore_errors = true

[tool.isort]
line_length = 120
multi_line_output = 3